// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input autosize 1`] = `
<Input
  autosize={true}
  onChange={[Function]}
  rows={4}
  type="textarea"
  value="foo"
>
  <InputTextarea
    autosize={true}
    disabled={false}
    onChange={[Function]}
    prefixCls="za-input"
    rows={4}
    showLength={false}
    value="foo"
  >
    <div
      className="za-input za-input-textarea"
    >
      <textarea
        disabled={false}
        onChange={[Function]}
        rows={4}
        value="foo"
      />
    </div>
  </InputTextarea>
</Input>
`;

exports[`Input renders correctly 1`] = `
<div
  class="za-input za-input-text"
>
  <input
    type="text"
  />
</div>
`;

exports[`Input showLength 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    maxlength="100"
    rows="4"
  />
  <div
    class="za-input-length"
  >
    0/100
  </div>
</div>
`;

exports[`Input type is date renders correctly 1`] = `
<div
  class="za-input za-input-text"
>
  <input
    type="text"
  />
</div>
`;

exports[`Input type is textarea renders correctly 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    rows="4"
  />
</div>
`;
